# pxv

./: .gitignore  CHANGELOG.md  README.md  default.nix  flake.nix  package.nix  pyproject.toml
.github/workflows/: ci.yml  deb.yml  release.yml
debian/: control  copyright  gen-changelog.sh  pxv.desktop  pxv.install  rules
docs/superpowers/plans/: 2026-06-05-deb-packaging.md  2026-06-05-exif-viewer-editor-wiper.md  2026-06-05-test-suite-and-ci.md  2026-06-07-visual-schnauzer.md  2026-06-10-annotations-core-engine.md  2026-06-10-annotations-draw-mode-mvp.md  2026-06-10-annotations-editing.md  2026-06-10-annotations-full-kit.md  2026-06-10-annotations-polish.md  2026-06-10-curves-tab.md  2026-06-10-eyedroppers-and-compare.md  2026-06-10-histogram-panel-and-tabs.md  2026-06-10-levels-tab.md
docs/superpowers/specs/: 2026-06-05-deb-packaging-design.md  2026-06-05-exif-viewer-editor-wiper-design.md  2026-06-05-save-options-dialog-design.md  2026-06-05-test-suite-and-ci-design.md  2026-06-06-slideshow-fullscreen-design.md  2026-06-06-undo-redo-stack-design.md  2026-06-07-visual-schnauzer-design.md  2026-06-07-wheel-zoom-pan-design.md  2026-06-08-nix-packaging-design.md  2026-06-10-annotations-design.md  2026-06-10-histogram-levels-curves-design.md
src/pxv/: __init__.py  annotation_palette.py  annotation_render.py  annotations.py  app.py  canvas_view.py  commands.py  context_menu.py  curve_editor.py  dialogs.py  enhancement_dialog.py  enhancements.py  file_list.py  histogram_panel.py  history.py  image_model.py  info_dialog.py  levels_tab.py  metadata.py  save_options.py  slideshow.py  thumbnail_browser.py  thumbnails.py  tone.py  tone_ui.py
tests/: conftest.py  test_annotation_mode.py  test_annotation_render.py  test_annotations.py  test_canvas_geometry.py  test_cli.py  test_commands.py  test_dialog_focus.py  test_enhancement_dialog_ui.py  test_enhancements.py  test_file_list.py  test_histogram_panel.py  test_history.py  test_image_model.py  test_metadata.py  test_save_helpers.py  test_save_options.py  test_slideshow.py  test_thumbnail_browser.py  test_thumbnails.py  test_tone.py  test_undo_redo.py
