[project]
name = "pxv"
version = "1.0.0"  #  NOTE: Also update in src/pxv/__init__.py
description = "A Python clone of the classic Unix xv image viewer"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE"]
authors = [
    { name = "Sean Reifschneider", email = "sean@realgo.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pillow>=12.0",
]
keywords = ["image", "viewer", "xv", "pillow", "tkinter", "graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Viewers",
]

[project.urls]
Homepage = "https://github.com/linsomniac/pxv"
Repository = "https://github.com/linsomniac/pxv"
Issues = "https://github.com/linsomniac/pxv/issues"

[project.scripts]
pxv = "pxv:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.9",
]
