[project]
name = "pxv"
version = "1.0.6"
description = "A Python clone of the classic Unix xv image viewer"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE"]
authors = [
    { name = "Sean Reifschneider", email = "sean@realgo.com" }
]
requires-python = ">=3.10"
dependencies = [
    # AIDEV-NOTE: Floor is the oldest Pillow providing ImageFont.load_default(size=...)
    # (10.1+), which annotation_render.py needs for scalable text labels — the
    # "concrete API need" this note used to anticipate (it also covers the older
    # Image.Resampling / Image.Transpose floor, 9.1+). Avoid raising this further
    # without a concrete API need — it forces upgrades and can cause resolver
    # conflicts in shared environments.
    "pillow>=10.1",
]
keywords = ["image", "viewer", "xv", "pillow", "tkinter", "graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Viewers",
]

[project.urls]
Homepage = "https://github.com/linsomniac/pxv"
Repository = "https://github.com/linsomniac/pxv"
Issues = "https://github.com/linsomniac/pxv/issues"

[project.scripts]
pxv = "pxv:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99

[tool.mypy]
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]
